--- a/android/app/src/main/res/layout/layout.xml
+++ b/android/app/src/main/res/layout/layout.xml
@@ -10,117 +10,113 @@
         <!--ENTITY_VARIABLE-->
     </data>
 
-    <!-- Generated with list form template named "My Custom List" -->
+    <!-- Generated with list form template named "Invoice Line List" -->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?colorSurface">
+        android:layout_height="wrap_content">
 
         <!-- START EDITING HERE -->
 
-
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_marginLeft="12dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
+            android:layout_marginStart="12dp"
             android:layout_marginTop="20dp"
-            app:cardBackgroundColor="?android:colorPrimary"
+            android:layout_marginBottom="12dp"
+            app:cardBackgroundColor="?colorPrimary"
             app:cardCornerRadius="12dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/__SPECIFIC_ID_1__"
-                android:text="__TEXT_1__"
-                tools:text="My field 1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
                 android:scrollbars="none"
+                android:text="__TEXT_1__"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                 android:textColor="@color/white"
-                android:textSize="18sp"/>
-        </androidx.cardview.widget.CardView>
+                tools:text="My field 1" />
 
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:id="@+id/linear1"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView">
-            <TextView
-                android:id="@+id/__SPECIFIC_ID_2__"
-                android:text="__TEXT_2__"
-                tools:text="My field 2"
-                android:layout_height="wrap_content"
-                android:layout_width="0dp"
-                android:layout_weight=".30"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginRight="6dp"
-                android:scrollbars="none"
-                android:textColor="?colorOnSurface"
-                android:textSize="18sp"/>
 
             <TextView
-                tools:text="x"
-                android:textAlignment="center"
-                android:layout_height="wrap_content"
+                android:id="@+id/__SPECIFIC_ID_2__"
                 android:layout_width="0dp"
-                android:layout_weight=".09"
-                android:layout_marginLeft="16dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="6dp"
+                android:layout_marginBottom="8dp"
+                android:layout_weight=".30"
+                android:scrollbars="none"
+                android:text="__TEXT_2__"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                android:textColor="?colorOnSurface"
+                tools:text="My field 2" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginRight="6dp"
+                android:layout_weight=".09"
                 android:scrollbars="none"
+                android:textAlignment="viewEnd"
                 android:textColor="?colorOnSurface"
-                android:textSize="18sp"/>
+                android:textSize="18sp"
+                tools:text="x" />
 
             <TextView
                 android:id="@+id/__SPECIFIC_ID_3__"
-                android:text="__TEXT_3__"
-                tools:text="My field 3"
-                android:layout_height="wrap_content"
                 android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginLeft="6dp"
-                android:layout_weight=".30"
-                android:textAlignment="viewEnd"
+                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginRight="16dp"
+                android:layout_weight=".30"
                 android:scrollbars="none"
+                android:text="__TEXT_3__"
+                android:textAlignment="viewStart"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                 android:textColor="?colorOnSurface"
-                android:textSize="18sp"/>
+                tools:text="My field 3" />
 
             <TextView
                 android:id="@+id/__SPECIFIC_ID_4__"
-                android:text="__TEXT_4__"
-                tools:text="My field 4"
-                android:layout_height="wrap_content"
                 android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginLeft="6dp"
-                android:layout_weight=".30"
-                android:textAlignment="viewEnd"
+                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginRight="16dp"
+                android:layout_weight=".30"
                 android:scrollbars="none"
-                android:textColor="?android:colorPrimary"
-                android:textSize="20sp"/>
+                android:text="__TEXT_4__"
+                android:textAlignment="viewEnd"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                android:textColor="?colorPrimary"
+                tools:text="My field 4" />
+
         </LinearLayout>
 
-
-
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
