--- a/android/app/src/main/res/layout/layout.xml
+++ b/android/app/src/main/res/layout/layout.xml
@@ -46,76 +46,80 @@
 
         </androidx.cardview.widget.CardView>
 
-        <LinearLayout
-            android:id="@+id/linear1"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/__SPECIFIC_ID_2__"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="8dp"
+            android:layout_weight=".30"
+            android:scrollbars="none"
+            android:text="__TEXT_2__"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            android:textColor="?colorOnSurface"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView">
+            app:layout_constraintTop_toBottomOf="@+id/cardView"
+            tools:text="My field 2" />
 
-            <TextView
-                android:id="@+id/__SPECIFIC_ID_2__"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="6dp"
-                android:layout_marginBottom="8dp"
-                android:layout_weight=".30"
-                android:scrollbars="none"
-                android:text="__TEXT_2__"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                android:textColor="?colorOnSurface"
-                tools:text="My field 2" />
+        <TextView
+            android:id="@+id/x_multi"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_weight=".09"
+            android:scrollbars="none"
+            android:text="x"
+            android:textAlignment="viewEnd"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            android:textColor="?colorOnSurface"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/__SPECIFIC_ID_3__"
+            app:layout_constraintStart_toEndOf="@+id/__SPECIFIC_ID_2__"
+            app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_weight=".09"
-                android:scrollbars="none"
-                android:textAlignment="viewEnd"
-                android:textColor="?colorOnSurface"
-                android:textSize="18sp"
-                tools:text="x" />
+        <TextView
+            android:id="@+id/__SPECIFIC_ID_3__"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+            android:layout_weight=".30"
+            android:scrollbars="none"
+            android:text="__TEXT_3__"
+            android:textAlignment="viewStart"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            android:textColor="?colorOnSurface"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/__SPECIFIC_ID_4__"
+            app:layout_constraintStart_toEndOf="@+id/x_multi"
+            app:layout_constraintTop_toBottomOf="@+id/cardView"
+            tools:text="My field 3" />
 
-            <TextView
-                android:id="@+id/__SPECIFIC_ID_3__"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
-                android:layout_weight=".30"
-                android:scrollbars="none"
-                android:text="__TEXT_3__"
-                android:textAlignment="viewStart"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                android:textColor="?colorOnSurface"
-                tools:text="My field 3" />
-
-            <TextView
-                android:id="@+id/__SPECIFIC_ID_4__"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
-                android:layout_weight=".30"
-                android:scrollbars="none"
-                android:text="__TEXT_4__"
-                android:textAlignment="viewEnd"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                android:textColor="?colorPrimary"
-                tools:text="My field 4" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/__SPECIFIC_ID_4__"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+            android:layout_weight=".30"
+            android:scrollbars="none"
+            android:text="__TEXT_4__"
+            android:textAlignment="viewEnd"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            android:textColor="?colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardView"
+            tools:text="My field 4" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
